# max-lilypond

./: CMakeLists.txt  LICENSE.md  README.md  package-info.json
docs/: lilypond.maxref.xml
help/: lilypond.maxhelp
source/lilypond/: CMakeLists.txt  lilypond.c
